# qa_guru_python_3_15

./: README.md  pyproject.toml
