[tool.poetry]
name = "qa-guru-python-3-17"
version = "0.1.0"
description = "test"
authors = ["Nikita Fedotov <nik197.1997@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_guru_python_3_17"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
selene = ">=2.0.0b17"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
